fix: Overflow x on mobile version

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,12 +39,16 @@
   }
 } */
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: var(--font-special-gothic-condensed-one), Arial, Helvetica, sans-serif;
   overscroll-behavior: none;
-  overflow-x: none;
+  overflow-x: hidden;
 }
 
 .bg-bsn {
